[metadata]
name = pigframe
version = 0.1.0
url= https://github.com/passive-radio/pigframe
author = passive-radio, Yudai Okubo
author_email = srccreator@gmail.com
license = MIT
license_file = LICENSE
description = A minimum Python-based game-engine backend library, designed to simplify and streamline the development process of game application.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, game, framework
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://github.com/passive-radio/pigframe
    Source = https://github.com/passive-radio/pigframe

[options]
package_dir = 
    = src
packages = pigframe
python_requires = >=3.10
packages = find:
include_package_data = false
zip_safe = false
install_requires =
    django
setup_requires =
    setuptools_scm

[options.extras_require]
psycopg2-binary = psycopg2-binary
psycopg2 = psycopg2