[metadata]
name = pigframe
url= https://github.com/passive-radio/pigframe
author = passive-radio, Yudai Okubo
author_email = srccreator@gmail.com
license = MIT
license_file = LICENSE
description = A minimum Python-based game-engine backend library, designed to simplify and streamline the development process of game application.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, game, framework
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://github.com/passive-radio/pigframe
    Source = https://github.com/passive-radio/pigframe

[options]
packages = find_namespace:
package_dir = 
    = src
python_requires = >=3.10
include_package_data = True

[options.package_data]
* = *.py, *.md

[options.packages.find]
where=src